ecommerce-eks/infra/sg.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Security Groups for Private EKS-based E-Commerce Platform.

Parameters:

  VpcId:
    Type: AWS::EC2::VPC::Id

  VpcCidrRange:
    Type: String
    Default: "10.0.0.0/16"

  ALBIngressCidr:
    Type: String
    Default: "0.0.0.0/0"


Resources:
  # ALB Security Group
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTPS inbound to ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref ALBIngressCidr
      Tags:
        - Key: Name
          Value: ALB-SG


  # NodeGroup Security Group
  NodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ALB traffic + internal cluster communication
      VpcId: !Ref VpcId
      SecurityGroupIngress:

        # ALB to NodePort communication
        - IpProtocol: tcp
          FromPort: 30000
          ToPort: 32767
          SourceSecurityGroupId: !Ref ALBSecurityGroup

        # Node to Node internal VPC traffic
        - IpProtocol: -1
          CidrIp: !Ref VpcCidrRange

      Tags:
        - Key: Name
          Value: Node-SG


  # EKS CONTROL PLANE SECURITY GROUP
  ClusterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EKS API Server
      VpcId: !Ref VpcId

      SecurityGroupIngress:

        # Allow all INTERNAL VPC (including Bastion + nodes) to EKS API
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidrRange   

        # Allow worker nodes to communicate with Control Plane
        - IpProtocol: -1
          SourceSecurityGroupId: !Ref NodeSecurityGroup

      Tags:
        - Key: Name
          Value: EKS-Cluster-SG

  # RDS Security Group
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow MySQL/Postgres traffic from NodeGroup
      VpcId: !Ref VpcId
      SecurityGroupIngress:

        # App Pods (on nodes) → RDS
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref NodeSecurityGroup

      Tags:
        - Key: Name
          Value: RDS-SG


Outputs:

  ALBSecurityGroupId:
    Value: !Ref ALBSecurityGroup
    Export:
      Name: ALBSecurityGroupId

  NodeSecurityGroupId:
    Value: !Ref NodeSecurityGroup
    Export:
      Name: NodeSecurityGroupId

  ClusterSecurityGroupId:
    Value: !Ref ClusterSecurityGroup
    Export:
      Name: ClusterSecurityGroupId

  RDSSecurityGroupId:
    Value: !Ref RDSSecurityGroup
    Export:
      Name: RDSSecurityGroupId
